--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div id="tabs" >
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="#">About<span class="sr-only">(current)</span></a></li>
-                    <li><a href="file:///C:/Users/seanh/Desktop/UNHBootCamp/HomeWork/Bootstrap-Portfolio/portfolio.html">Portfolio</a></li>
+                    <li><a href="https://seanhalupczynski.github.io/Bootstrap-Portfolio/portfolio.html">Portfolio</a></li>
                     <li><a href="file:///C:/Users/seanh/Desktop/UNHBootCamp/HomeWork/Bootstrap-Portfolio/contact.html">Contact</a></li>
                 </ul>                        
             </div>
