--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
 <body>
     <!-- NavBar Header -->
     <nav class="navbar navbar-default navbar-fixed-top">
-        <div id="navBar" class="container">
+        <div class="container">
             <div class="navbar-header">
                 <!-- Name on NavBar -->
-                <a id="name" href="file:///C:/Users/seanh/Desktop/UNHBootCamp/HomeWork/Bootstrap-Portfolio/index.html">Sean Halupczynski</a>
+                <a id="brand" href="index.html">Sean Halupczynski</a>
             </div>
             <!-- NavBar tabs -->
-            <div id="tabs" >
+            <div >
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="#">About<span class="sr-only">(current)</span></a></li>
-                    <li><a href="https://seanhalupczynski.github.io/Bootstrap-Portfolio/portfolio.html">Portfolio</a></li>
-                    <li><a href="file:///C:/Users/seanh/Desktop/UNHBootCamp/HomeWork/Bootstrap-Portfolio/contact.html">Contact</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>                        
             </div>
         </div>
     </nav>
     <!-- About Me Body -->
-    <div id="textBody" class="container-fluid">
+    <div class="container">
         <!-- About Me -->
-        <div id="aboutSection" class="row">
-            <div id="aboutText" class="col-sm-12 col-md-7">
-                <div id="aboutHeader" class="row">
+        <div class="row">
+            <div id="mainSection" class="col-sm-12 col-md-8">
+                <div class="row">
                     <h3>About Me</h3>
                 </div>
                 <div class="row">
@@ -41,20 +41,33 @@
                         <img src="assets/images/Seans_Bar.jpg" class="img-responsive" alt="Sean's Bar">
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-12">
-                        <p> I was born and raised in Erie, Pennsylvania. I attend Penn State University. In 2010, I graduated with a Management Infomration Stystems & Supply Chain Management degree. After graduation, I begain may working career at United Way of Erie County.
-
-                            I was the Database and Systems Coordinator at United Way of Erie County. My responsibilities were to uphold the data integrety of out donor database and maintain our IT infrastucture. I spent just over four years until being hired by Liberty Mutual.
-                            
-                            Liberty Mutual hired me as a Business Systems Analyst in their Financial Systems department. There, I worked on building out analytic databases, backend infrastructure, and frontend user interface projects. In November of 2016, I transitioned into the Claims IT department and placed on the Regulatory Reporting team. The team's focus is on our Personal Insurance Loss Reporting database.
-                            
-                            Outside of work, I enjoy staying active. You can find me at the gym, playing basketball, playing softball, and mostly on the golf course. I also enjoy keeping my mind sharp by doing puzzles, such as crosswords and sudoku. I also enjoy going to triva nights at local bars and restaurants. I have been told by my friends that I don't know everything about certain things, but I know certain things about everything.
+                        <p> I was born and raised in Erie, Pennsylvania. I attend Penn State University. 
+                            In 2010, I graduated with a Management Infomration Stystems & Supply Chain Management degree. 
+                            After graduation, I begain may working career at United Way of Erie County.
+                            I was the Database and Systems Coordinator at United Way of Erie County. 
+                            My responsibilities were to uphold the data integrety of out donor database and maintain our 
+                            IT infrastucture. I spent just over four years until being hired by Liberty Mutual.
+                        </p>
+                        <p>    
+                            Liberty Mutual hired me as a Business Systems Analyst in their Financial Systems department. 
+                            There, I worked on building out analytic databases, backend infrastructure, and frontend user 
+                            interface projects. In November of 2016, I transitioned into the Claims IT department and placed on the 
+                            Regulatory Reporting team. The team's focus is on our Personal Insurance Loss Reporting database.
+                        </p>
+                        <p>   
+                            Outside of work, I enjoy staying active. You can find me at the gym, 
+                            playing basketball, playing softball, and mostly on the golf course. 
+                            I also enjoy keeping my mind sharp by doing puzzles, such as crosswords and sudoku. 
+                            I also enjoy going to triva nights at local bars and restaurants. 
+                            I have been told by my friends that I don't know everything about certain things, 
+                            but I know certain things about everything.
                         </p>
                     </div>    
                 </div>
             </div>
             <!-- Space between About Me and Side Bar -->
-            <div class="col-md-1">
-            </div> 
+            <!-- <div class="col-md-1">
+            </div>  -->
             <!-- Side Bar -->
             <div id="sideBar" class="col-xs-12 col-sm-12 col-md-4">
                 <div class="row">
