--- a/portfolio.html
+++ b/portfolio.html
@@ -16,54 +16,54 @@
         <div id="navBar" class="container">
             <div class="navbar-header">
                 <!-- Name on NavBar -->
-                <a id="name" href="file:///C:/Users/seanh/Desktop/UNHBootCamp/HomeWork/Bootstrap-Portfolio/index.html">Sean Halupczynski</a>
+                <a href="index.html">Sean Halupczynski</a>
             </div>
             <!-- NavBar tabs -->
-            <div id="tabs" >
+            <div>
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="#">About<span class="sr-only">(current)</span></a></li>
-                    <li><a href="file:///C:/Users/seanh/Desktop/UNHBootCamp/HomeWork/Bootstrap-Portfolio/portfolio.html">Portfolio</a></li>
-                    <li><a href="file:///C:/Users/seanh/Desktop/UNHBootCamp/HomeWork/Bootstrap-Portfolio/contact.html">Contact</a></li>
+                    <li><a href="index.html">About</a></li>
+                    <li class="active"><a href="#">Portfolio<span class="sr-only">(current)</span></a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>                        
             </div>
         </div>
     </nav>
     <!-- Portfolio Body -->
-    <div id="textBody" class="container-fluid">
+    <div class="container">
         <!-- Portfolio Section -->
-        <div id="aboutSection" class="row">
-            <div id="aboutText" class="col-sm-12 col-md-7">
-                <div id="aboutHeader" class="row">
+        <div class="row">
+            <div id="mainSection" class="col-xs-12 col-sm-12 col-md-8">
+                <div class="row">
                     <h3>Portfolio</h3>
                 </div>
                 <div class="row">
-                    <div class="col-xs-12 col-sm-6 col-md12">
+                    <div class="col-xs-12 col-sm-6 col-md-12">
                         <img src="assets/images/hangman.jpg" alt="hangman">
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md12">
+                    <div class="col-xs-12 col-sm-6 col-md-12">
                         <img src="assets/images/rpggame.jpg" alt="rpg">
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md12">
+                    <div class="col-xs-12 col-sm-6 col-md-12">
                         <img src="assets/images/trivia.jpg" alt="trivia">
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md12">
+                    <div class="col-xs-12 col-sm-6 col-md-12">
                         <img src="assets/images/widget.jpg" alt="widget">
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md12">
+                    <div class="col-xs-12 col-sm-6 col-md-12">
                         <img src="assets/images/rockpaperscissors.jpg" alt="rockpaperscissors">
                     </div>                                        
                 </div>
             </div>
             <!-- Space between Portfolio and Side Bar -->
-            <div class="col-md-1">
-            </div> 
+            <!-- <div class="col-md-1">
+            </div>  -->
             <!-- Side Bar -->
             <div id="sideBar" class="col-xs-12 col-sm-12 col-md-4">
                 <div class="row">
                     <h3>Contact Me</h3>
                 </div>
                 <!-- Contact Me Icons -->
-                <div id="contactIcons" class="row">
+                <div class="row">
                     <div class="col-xs-2 col-sm-2 col-md-4">
                         <a href="#">
                             <img src="assets/images/GitHubIcon.png" class="img-thumbnail" alt="GitHub">
