--- a/portfolio.html
+++ b/portfolio.html
@@ -37,21 +37,66 @@
                     <h3>Portfolio</h3>
                 </div>
                 <div class="row">
-                    <div class="col-xs-12 col-sm-6 col-md-12">
-                        <img src="assets/images/hangman.jpg" alt="hangman">
+                    <div class="col-sm-6 col-md-4 portfolioItem">
+                        <div class="thumbnail">
+                          <img src="assets/images/trivia.jpg" alt="Trivia">
+                          <div class="caption">
+                            <h3>Faking Confidence Trivia</h3>
+                            <p>...</p>
+                            <p><a href="https://seanhalupczynski.github.io/TriviaGame/" class="btn btn-primary" role="button">Button</a></p>
+                          </div>
+                        </div>
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md-12">
-                        <img src="assets/images/rpggame.jpg" alt="rpg">
+                    <div class="col-sm-6 col-md-4 portfolioItem">
+                        <div class="thumbnail">
+                          <img src="assets/images/hangman.jpg" alt="Hangman">
+                          <div class="caption">
+                            <h3>Hangman</h3>
+                            <p>...</p>
+                            <p><a href="https://seanhalupczynski.github.io/Hangman-Game/" class="btn btn-primary" role="button">Button</a></p>
+                          </div>
+                        </div>
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md-12">
-                        <img src="assets/images/trivia.jpg" alt="trivia">
+                    <div class="col-sm-6 col-md-4 portfolioItem">
+                        <div class="thumbnail">
+                          <img src="assets/images/thomas_the_tank_engine.PNG" alt="Train_Scheduler">
+                          <div class="caption">
+                            <h3>Train Scheduler</h3>
+                            <p>...</p>
+                            <p><a href="https://seanhalupczynski.github.io/TrainSchedule/" class="btn btn-primary" role="button">Button</a></p>
+                          </div>
+                        </div>
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md-12">
-                        <img src="assets/images/widget.jpg" alt="widget">
+                    <div class="col-sm-6 col-md-4 portfolioItem">
+                        <div class="thumbnail">
+                          <img src="assets/images/giphy.PNG" alt="Giphy">
+                          <div class="caption">
+                            <h3>Giphy</h3>
+                            <p>...</p>
+                            <p><a href="https://seanhalupczynski.github.io/GiffyApp/" class="btn btn-primary" role="button">Button</a></p>
+                          </div>
+                        </div>
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md-12">
-                        <img src="assets/images/rockpaperscissors.jpg" alt="rockpaperscissors">
-                    </div>                                        
+                    <div class="col-sm-6 col-md-4 portfolioItem">
+                        <div class="thumbnail">
+                          <img src="assets/images/food.PNG" alt="Fridge_To_Table">
+                          <div class="caption">
+                            <h3>Fridge To Table</h3>
+                            <p>...</p>
+                            <p><a href="https://seanhalupczynski.github.io/FridgeToTable/" class="btn btn-primary" role="button">Button</a></p>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-4 portfolioItem">
+                        <div class="thumbnail">
+                          <img src="assets/images/crystal.PNG" alt="Crystal_Collector">
+                          <div class="caption">
+                            <h3>It's a Numbers Game</h3>
+                            <p>...</p>
+                            <p><a href="https://seanhalupczynski.github.io/CrystalCollector/" class="btn btn-primary" role="button">Button</a></p>
+                          </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <!-- Space between Portfolio and Side Bar -->
