changes to styling in css, added main.js file in javascript directory under assests direcotry, changed spacing on index.html page between about and contact sections

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
         </div>
     </nav>
     <!-- Contact Me Body -->
-    <div class="container">
+    <div class="container" id="contact-form-container">
         <!-- Contact Me Section -->
         <div class="row">
             <div id="mainSection" class="col-sm-12 col-md-8">
@@ -58,7 +58,7 @@
             <!-- <div class="col-md-1">
             </div>  -->
             <!-- Side Bar -->
-            <div id="sideBar" class="col-xs-12 col-sm-12 col-md-4">
+            <div id="contact-me" class="col-xs-12 col-sm-12 col-md-4 sideBar">
                 <div class="row">
                     <h3>Contact Me</h3>
                 </div>
