--- a/portfolio.html
+++ b/portfolio.html
@@ -103,7 +103,7 @@
             <!-- <div class="col-md-1">
             </div>  -->
             <!-- Side Bar -->
-            <div id="sideBar" class="col-xs-12 col-sm-12 col-md-4">
+            <div id="contact-me" class="col-xs-12 col-sm-12 col-md-4 sideBar">
                 <div class="row">
                     <h3>Contact Me</h3>
                 </div>
