--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
     <div class="container">
         <!-- About Me -->
         <div class="row">
-            <div id="mainSection" class="col-sm-12 col-md-8">
+            <div id="mainSection" class="col-sm-12 col-md-7">
                 <div class="row">
                     <h3>About Me</h3>
                 </div>
                 <div class="row">
-                    <div class"col-xs-12 col-sm-5 col-md-12">
+                    <div class="col-xs-12 col-sm-5 col-md-12">
                         <img src="assets/images/Seans_Bar.jpg" class="img-responsive" alt="Sean's Bar">
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-12">
@@ -69,7 +69,7 @@
             <!-- <div class="col-md-1">
             </div>  -->
             <!-- Side Bar -->
-            <div id="sideBar" class="col-xs-12 col-sm-12 col-md-4">
+            <div id="contact-me" class="col-xs-12 col-sm-12 col-md-4 sideBar">
                 <div class="row">
                     <h3>Contact Me</h3>
                 </div>
@@ -77,17 +77,17 @@
                 <div id="contactIcons" class="row">
                     <div class="col-xs-2 col-sm-2 col-md-4">
                         <a href="#">
-                            <img src="assets/images/GitHubIcon.png" class="img-thumbnail" alt="GitHub">
+                            <img src="assets/images/GitHubIcon.png" class="img-thumbnail" alt="GitHub" title="GitHub">
                         </a>
                     </div>
                     <div class="col-xs-2 col-sm-2 col-md-4">
                         <a href="#">
-                            <img src="assets/images/LinkedInIcon.png" class="img-thumbnail" alt="LinkedIn">
+                            <img src="assets/images/LinkedInIcon.png" class="img-thumbnail" alt="LinkedIn" title="LinkedIn">
                         </a>
                     </div>
                     <div class="col-xs-2 col-sm-2 col-md-4">
                         <a href="#">
-                            <img src="assets/images/StackOverflowIcon.png" class="img-thumbnail" alt="StackOverflow">
+                            <img src="assets/images/StackOverflowIcon.png" class="img-thumbnail" alt="StackOverflow" title="StackOverflow">
                         </a>
                     </div>
                 </div>
