--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Sean Halupczynski - About Me</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="main.js"></script>
+    <script src="./assets/javascript/main.js"></script>
     <!-- <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" /> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
@@ -13,7 +13,7 @@
 <body>
     <!-- NavBar Header -->
     <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
+        <div class="fluid-container">
             <div class="navbar-header">
                 <!-- Name on NavBar -->
                 <a id="brand" href="index.html">Sean Halupczynski</a>
@@ -32,7 +32,7 @@
     <div class="container">
         <!-- About Me -->
         <div class="row">
-            <div id="mainSection" class="col-sm-12 col-md-7">
+            <div id="about-me" class="col-sm-12 col-md-7 mainSection">
                 <div class="row">
                     <h3>About Me</h3>
                 </div>
