--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Sean Halupczynski - Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="main.js"></script>
+    <script src="./assets/javascript/main.js"></script>
     <!-- <link rel="stylesheet" type="text/css" media="screen" href="assets/reset.css" /> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
@@ -13,7 +13,7 @@
 <body>
     <!-- NavBar Header -->
     <nav class="navbar navbar-default navbar-fixed-top">
-        <div id="navBar" class="container">
+        <div id="navBar" class="fluid-container">
             <div class="navbar-header">
                 <!-- Name on NavBar -->
                 <a href="index.html">Sean Halupczynski</a>
@@ -32,7 +32,7 @@
     <div class="container">
         <!-- Portfolio Section -->
         <div class="row">
-            <div id="mainSection" class="col-xs-12 col-sm-12 col-md-8">
+            <div id="app-portfolio" class="col-sm-12 col-md-7 mainSection">
                 <div class="row">
                     <h3>Portfolio</h3>
                 </div>
