upgraded to bootstrap v4.3.1, made some styling changes, added new photos to about page, balanced the thumbnails on the portfolio page.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="./assets/javascript/main.js"></script>
     <!-- <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" /> -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
 </head>
 <body>
@@ -37,9 +37,20 @@
                     <h3>About Me</h3>
                 </div>
                 <div class="row">
-                    <div class="col-xs-12 col-sm-5 col-md-12">
-                        <img src="assets/images/Seans_Bar.jpg" class="img-responsive" alt="Sean's Bar">
+                    <div class="col-xs-3 col-sm-3 col-md-3">
+                        <img src="assets/images/Seans_Bar.jpg" id="seans-bar-image" class="img-responsive my-images" alt="Sean's Bar">
                     </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3">
+                        <img src="assets/images/golf_shot.jpg" id="golf-shot-image" class="img-responsive my-images" alt="Sean's Bar">
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3">
+                        <img src="assets/images/nittany_lion.jpg" id="nittany-lion-image" class="img-responsive my-images" alt="Sean's Bar">
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3">
+                        <img src="assets/images/wedding.jpg" id="wedding-image" class="img-responsive my-images" alt="Sean's Bar">
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-xs-12 col-sm-6 col-md-12">
                         <p> I was born and raised in Erie, Pennsylvania. I attend Penn State University. 
                             In 2010, I graduated with a Management Infomration Stystems & Supply Chain Management degree. 
@@ -95,7 +106,7 @@
         </div>
         <br>
         <div class="row">
-            <p id="footer">Copyright</p>
+            <p class="footer">Copyright</p>
         </div>
     </div>
     
