--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="./assets/javascript/main.js"></script>
     <!-- <link rel="stylesheet" type="text/css" media="screen" href="assets/reset.css" /> -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
 </head>
 <body>
@@ -39,61 +39,63 @@
                 <div class="row">
                     <div class="col-sm-6 col-md-4 portfolioItem">
                         <div class="thumbnail">
-                          <img src="assets/images/trivia.jpg" alt="Trivia">
+                          <img src="assets/images/trivia.jpg" id="trivia-game" alt="Trivia">
                           <div class="caption">
-                            <h3>Faking Confidence Trivia</h3>
-                            <p>...</p>
-                            <p><a href="https://seanhalupczynski.github.io/TriviaGame/" class="btn btn-primary" role="button">Button</a></p>
+                            <h5><b>Faking Confidence Trivia</b></h5>
+                            <p>Do you have the knowledge to fake confidence?</p>
+                            <a href="https://seanhalupczynski.github.io/TriviaGame/" class="btn btn-primary" role="button">Play</a>
                           </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-4 portfolioItem">
                         <div class="thumbnail">
-                          <img src="assets/images/hangman.jpg" alt="Hangman">
+                          <img src="assets/images/hangman.jpg" id="hangman-game" alt="Hangman">
                           <div class="caption">
-                            <h3>Hangman</h3>
-                            <p>...</p>
-                            <p><a href="https://seanhalupczynski.github.io/Hangman-Game/" class="btn btn-primary" role="button">Button</a></p>
+                            <h5><b>Hangman</b></h5>
+                            <p>Solve for the word before it is too late.</p>
+                            <a href="https://seanhalupczynski.github.io/Hangman-Game/" class="btn btn-primary" role="button">Play</a>
                           </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-4 portfolioItem">
                         <div class="thumbnail">
-                          <img src="assets/images/thomas_the_tank_engine.PNG" alt="Train_Scheduler">
+                          <img src="assets/images/thomas_the_tank_engine.PNG" id="train-scheduler-app" alt="Train_Scheduler">
                           <div class="caption">
-                            <h3>Train Scheduler</h3>
-                            <p>...</p>
-                            <p><a href="https://seanhalupczynski.github.io/TrainSchedule/" class="btn btn-primary" role="button">Button</a></p>
+                            <h5><b>Train Scheduler</b></h5>
+                            <p>Don't be late. Check when you train is planned to depart.</p>
+                            <a href="https://seanhalupczynski.github.io/TrainSchedule/" class="btn btn-primary" role="button">View Schedule</a>
+                          </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6 col-md-4 portfolioItem">
+                        <div class="thumbnail">
+                          <img src="assets/images/giphy.PNG" id="giphy-app" alt="Giphy">
+                          <div class="caption">
+                            <h5><b>Giphy</b></h5>
+                            <p>All gifs all the time!</p>
+                            <a href="https://seanhalupczynski.github.io/GiffyApp/" class="btn btn-primary" role="button">Get your gif on</a>
                           </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-4 portfolioItem">
                         <div class="thumbnail">
-                          <img src="assets/images/giphy.PNG" alt="Giphy">
+                          <img src="assets/images/food.PNG" id="fridge-to-table" alt="Fridge_To_Table">
                           <div class="caption">
-                            <h3>Giphy</h3>
-                            <p>...</p>
-                            <p><a href="https://seanhalupczynski.github.io/GiffyApp/" class="btn btn-primary" role="button">Button</a></p>
+                            <h5><b>Fridge To Table</b></h5>
+                            <p>Don't know what to make for dinner? Enter in the contents of your fridge and see what you can make.</p>
+                            <a href="https://seanhalupczynski.github.io/FridgeToTable/" class="btn btn-primary" role="button">Start Cookin'</a>
                           </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-4 portfolioItem">
                         <div class="thumbnail">
-                          <img src="assets/images/food.PNG" alt="Fridge_To_Table">
+                          <img src="assets/images/crystal.PNG" id="crystal-collector-app" alt="Crystal_Collector">
                           <div class="caption">
-                            <h3>Fridge To Table</h3>
-                            <p>...</p>
-                            <p><a href="https://seanhalupczynski.github.io/FridgeToTable/" class="btn btn-primary" role="button">Button</a></p>
-                          </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-4 portfolioItem">
-                        <div class="thumbnail">
-                          <img src="assets/images/crystal.PNG" alt="Crystal_Collector">
-                          <div class="caption">
-                            <h3>It's a Numbers Game</h3>
-                            <p>...</p>
-                            <p><a href="https://seanhalupczynski.github.io/CrystalCollector/" class="btn btn-primary" role="button">Button</a></p>
+                            <h5><b>It's a Numbers Game</b></h5>
+                            <p>Can you figure out the mystory values to add up to the right number?</p>
+                            <a href="https://seanhalupczynski.github.io/CrystalCollector/" class="btn btn-primary" role="button">Play</a>
                           </div>
                         </div>
                     </div>
@@ -129,7 +131,7 @@
         </div>
         <br>
         <div class="row">
-            <p id="footer">Copyright</p>
+            <p class="footer">Copyright</p>
         </div>
     </div>        
 </body>
