--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="./assets/javascript/main.js"></script>
     <!-- <link rel="stylesheet" type="text/css" media="screen" href="assets/reset.css" /> -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
 </head>
 <body>
@@ -29,7 +29,7 @@
         </div>
     </nav>
     <!-- Contact Me Body -->
-    <div class="container" id="contact-form-container">
+    <div class="container">
         <!-- Contact Me Section -->
         <div class="row">
             <div id="contact-me-form" class="col-sm-12 col-md-7 mainSection">
@@ -40,17 +40,17 @@
                     <form>
                         <div class="from-group">
                             <label for="name">Enter Full Name</label>
-                            <input type="text" class="form-control" id="name">
+                            <input type="text" class="form-control" id="name" placeholder="e.g. John Doe">
                         </div>
                         <div class="form-group">
                             <label for="email">Enter Email</label>
-                            <input type="email" class="form-control" id="email">
+                            <input type="email" class="form-control" id="email" placeholder="e.g. John.Doe1234@gmail.com">
                         </div>
                         <div class="form-group">
                             <label for="message">Enter Your Message</label>
-                            <input type="text" class="form-control" id="msg" name="msg">
+                            <textarea class="form-control" id="msg" name="msg" placeholder="Enter you message here." rows="5"></textarea>
                         </div>
-                        <button type="submit" class="btn btn-default">Submit</button>
+                        <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
                 </div>
             </div>
@@ -84,7 +84,7 @@
         </div>
         <br>
         <div class="row">
-            <p id="footer">Copyright</p>
+            <p class="footer">Copyright</p>
         </div>
     </div>
 </body>
