--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Sean Halupczynski - Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="./assets/javascript/main.js"></script>
     <!-- <link rel="stylesheet" type="text/css" media="screen" href="assets/reset.css" /> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -12,21 +15,17 @@
 </head>
 <body>
     <!-- NavBar Header -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="fluid-container">
-            <div class="navbar-header">
-                <!-- Name on NavBar -->
-                <a href="index.html">Sean Halupczynski</a>
-            </div>
-            <!-- NavBar tabs -->
-            <div>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a class="active" href="#">Contact<span class="sr-only">(current)</span></a></li>
-                </ul>                        
-            </div>
+    <nav class="navbar fixed-top navbar-expand-lg">
+        <div class="navbar-header">
+            <!-- Name on NavBar -->
+            <a id="brand" class="navbar-brand" href="index.html">Sean Halupczynski</a>
         </div>
+        <!-- NavBar tabs -->
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item active"><a class="nav-link" href="./index.html">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="./portfolio.html">Portfolio</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Contact<span class="sr-only">(current)</span></a></li>
+        </ul>                        
     </nav>
     <!-- Contact Me Body -->
     <div class="container">
