added some tool tips to my contact me sidebar

--- a/contact.html
+++ b/contact.html
@@ -65,17 +65,17 @@
                 <div class="row">
                     <div class="col-xs-2 col-sm-2 col-md-4">
                         <a href="#">
-                            <img src="assets/images/GitHubIcon.png" class="img-thumbnail" alt="GitHub">
+                            <img src="assets/images/GitHubIcon.png" class="img-thumbnail" alt="GitHub" title="GitHub">
                         </a>
                     </div>
                     <div class="col-xs-2 col-sm-2 col-md-4">
                         <a href="#">
-                            <img src="assets/images/LinkedInIcon.png" class="img-thumbnail" alt="LinkedIn">
+                            <img src="assets/images/LinkedInIcon.png" class="img-thumbnail" alt="LinkedIn" title="LinkedIn">
                         </a>
                     </div>
                     <div class="col-xs-2 col-sm-2 col-md-4">
                         <a href="#">
-                            <img src="assets/images/StackOverflowIcon.png" class="img-thumbnail" alt="StackOverflow">
+                            <img src="assets/images/StackOverflowIcon.png" class="img-thumbnail" alt="StackOverflow" title="StackOverflow">
                         </a>
                     </div>
                 </div>
