--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                         <img src="assets/images/Seans_Bar.jpg" id="seans-bar-image" class="img-responsive my-images" alt="Sean's Bar">
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3">
-                        <img src="assets/images/golf_shot.jpg" id="golf-shot-image" class="img-responsive my-images" alt="Sean's Bar">
+                        <img src="assets/images/golf_shot.jpg" id="golf-shot-image" class="img-responsive my-images" alt="Golf Shot">
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3">
-                        <img src="assets/images/nittany_lion.jpg" id="nittany-lion-image" class="img-responsive my-images" alt="Sean's Bar">
+                        <img src="assets/images/nittany_lion.jpg" id="nittany-lion-image" class="img-responsive my-images" alt="Nittany Lion">
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3">
-                        <img src="assets/images/wedding.jpg" id="wedding-image" class="img-responsive my-images" alt="Sean's Bar">
+                        <img src="assets/images/wedding.jpg" id="wedding-image" class="img-responsive my-images" alt="Wedding Photo">
                     </div>
                 </div>
                 <div class="row">
