--- a/index.html
+++ b/index.html
@@ -14,76 +14,93 @@
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
 </head>
 <body>
-    <!-- NavBar Header -->
-    <nav class="navbar fixed-top navbar-expand-lg">
-        <div class="navbar-header">
-            <!-- Name on NavBar -->
-            <a id="brand" class="navbar-brand" href="index.html">Sean Halupczynski</a>
-        </div>
-        <!-- NavBar tabs -->
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item active"><a class="nav-link" href="#">About<span class="sr-only">(current)</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="./portfolio.html">Portfolio</a></li>
-            <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
-        </ul>                        
-    </nav>
+    <header>
+        <!-- NavBar Header -->
+        <nav class="navbar fixed-top navbar-expand-lg">
+            <div class="navbar-header">
+                <!-- Name on NavBar -->
+                <a id="brand" class="navbar-brand" href="index.html">Sean Halupczynski</a>
+            </div>
+            <!-- NavBar tabs -->
+            <ul class="navbar-nav ml-auto">
+                <li>
+                    <a href="#">
+                        <img src="assets/images/GitHubIcon.png" class="img-thumbnail" alt="GitHub" title="GitHub">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="assets/images/LinkedInIcon.png" class="img-thumbnail" alt="LinkedIn" title="LinkedIn">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="assets/images/StackOverflowIcon.png" class="img-thumbnail" alt="StackOverflow" title="StackOverflow">
+                    </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./contact.html">Contact</a>
+                </li>
+            </ul>                        
+        </nav>
+    </header>
     <!-- About Me Body -->
-    <div class="container">
+    <div class="container mainSection">
         <!-- About Me -->
         <div class="row">
-            <div id="about-me" class="col-sm-12 col-md-7 mainSection">
+            <h3>About Me</h3>
+        </div>
+        <div class="row">
+            <div class="col-sm-4 col-md-2 photos-left">
                 <div class="row">
-                    <h3>About Me</h3>
+                    <img src="assets/images/Seans_Bar.jpg" id="seans-bar-image" class="img-responsive my-images" alt="Sean's Bar">
                 </div>
                 <div class="row">
-                    <div class="col-xs-3 col-sm-3 col-md-3">
-                        <img src="assets/images/Seans_Bar.jpg" id="seans-bar-image" class="img-responsive my-images" alt="Sean's Bar">
-                    </div>
-                    <div class="col-xs-3 col-sm-3 col-md-3">
-                        <img src="assets/images/golf_shot.jpg" id="golf-shot-image" class="img-responsive my-images" alt="Golf Shot">
-                    </div>
-                    <div class="col-xs-3 col-sm-3 col-md-3">
-                        <img src="assets/images/nittany_lion.jpg" id="nittany-lion-image" class="img-responsive my-images" alt="Nittany Lion">
-                    </div>
-                    <div class="col-xs-3 col-sm-3 col-md-3">
-                        <img src="assets/images/wedding.jpg" id="wedding-image" class="img-responsive my-images" alt="Wedding Photo">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12 col-sm-6 col-md-12">
-                        <p> I was born and raised in Erie, Pennsylvania. I attend Penn State University. 
-                            In 2010, I graduated with a Management Infomration Stystems & Supply Chain Management degree. 
-                            After graduation, I begain may working career at United Way of Erie County.
-                            I was the Database and Systems Coordinator at United Way of Erie County. 
-                            My responsibilities were to uphold the data integrety of out donor database and maintain our 
-                            IT infrastucture. I spent just over four years until being hired by Liberty Mutual.
-                        </p>
-                        <p>    
-                            Liberty Mutual hired me as a Business Systems Analyst in their Financial Systems department. 
-                            There, I worked on building out analytic databases, backend infrastructure, and frontend user 
-                            interface projects. In November of 2016, I transitioned into the Claims IT department and placed on the 
-                            Regulatory Reporting team. The team's focus is on our Personal Insurance Loss Reporting database.
-                        </p>
-                        <p>   
-                            Outside of work, I enjoy staying active. You can find me at the gym, 
-                            playing basketball, playing softball, and mostly on the golf course. 
-                            I also enjoy keeping my mind sharp by doing puzzles, such as crosswords and sudoku. 
-                            I also enjoy going to triva nights at local bars and restaurants. 
-                            I have been told by my friends that I don't know everything about certain things, 
-                            but I know certain things about everything.
-                        </p>
-                    </div>    
+                    <img src="assets/images/golf_shot.jpg" id="golf-shot-image" class="img-responsive my-images" alt="Golf Shot">
                 </div>
             </div>
-            <!-- Space between About Me and Side Bar -->
-            <!-- <div class="col-md-1">
-            </div>  -->
+            <div class="col-sm-4 col-md-8 text-center">
+                <p> I was born and raised in Erie, Pennsylvania. I attend Penn State University. 
+                    In 2010, I graduated with a Management Infomration Stystems & Supply Chain Management degree. 
+                    After graduation, I begain may working career at United Way of Erie County.
+                    I was the Database and Systems Coordinator at United Way of Erie County. 
+                    My responsibilities were to uphold the data integrety of out donor database and maintain our 
+                    IT infrastucture. I spent just over four years until being hired by Liberty Mutual.
+                </p>
+                <p>    
+                    Liberty Mutual hired me as a Business Systems Analyst in their Financial Systems department. 
+                    There, I worked on building out analytic databases, backend infrastructure, and frontend user 
+                    interface projects. In November of 2016, I transitioned into the Claims IT department and placed on the 
+                    Regulatory Reporting team. The team's focus is on our Personal Insurance Loss Reporting database.
+                </p>
+                <p>   
+                    Outside of work, I enjoy staying active. You can find me at the gym, 
+                    playing basketball, playing softball, and mostly on the golf course. 
+                    I also enjoy keeping my mind sharp by doing puzzles, such as crosswords and sudoku. 
+                    I also enjoy going to triva nights at local bars and restaurants. 
+                    I have been told by my friends that I don't know everything about certain things, 
+                    but I know certain things about everything.
+                </p>
+            </div>  
+            <div class="col-sm-4 col-md-2 photos-right">
+                <div class="row">
+                    <img src="assets/images/nittany_lion.jpg" id="nittany-lion-image" class="img-responsive my-images" alt="Nittany Lion">
+                </div>
+                <div class="row">
+                    <img src="assets/images/wedding.jpg" id="wedding-image" class="img-responsive my-images" alt="Wedding Photo">
+                </div>
+            </div>  
             <!-- Side Bar -->
-            <div id="contact-me" class="col-xs-12 col-sm-12 col-md-4 sideBar">
+            <!-- <div id="contact-me" class="col-xs-12 col-sm-12 col-md-4 sideBar">
                 <div class="row">
                     <h3>Contact Me</h3>
                 </div>
-                <!-- Contact Me Icons -->
                 <div id="contactIcons" class="row">
                     <div class="col-xs-2 col-sm-2 col-md-4">
                         <a href="#">
@@ -101,7 +118,7 @@
                         </a>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <br>
         <div class="row">
